# MLX42

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CmakeLists.txt  LICENSE  Makefile  Makefile_Darwin.mk  Makefile_Linux.mk  Makefile_Unix.mk  Makefile_Windows.mk  Makefile_WindowsNT.mk  README.md  SECURITY.md  VERSION.md  mlx42.h  mlx42.supp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  static.yml  wasm.yml
cmake/: Findglfw3.cmake  LinkGLFW.cmake
config/: mlx42.pc.in
docs/: 42.md  42Migration.md  Basics.md  Colors.md  Functions.md  Hooks.md  Images.md  Input.md  MLX42.1  Shaders.md  Textures.md  XPM42.md  index.html  index.md  installation.md
ffi/python/: README.md  example.py  libmlx.py
include/: .mlx.h.swp
include/MLX42/: MLX42.h  MLX42_Input.h  MLX42_Int.h  MLX42_Keys.h  MLX42_Vec.h  MLX_Keys.h  MLX_Vec.h
include/ctest/: README.md  ctest.h
include/glad/: glad.h
include/lodepng/: lodepng.h
lib/glad/: glad.c
lib/png/: lodepng.c
shaders/: default.frag  default.vert
src/: glad.c  mlx_cursor.c  mlx_exit.c  mlx_get_mouse_pos.c  mlx_images.c  mlx_init.c  mlx_keys.c  mlx_loop.c  mlx_monitor.c  mlx_mouse.c  mlx_new_canvas.c  mlx_put_pixel.c  mlx_putpixel.c  mlx_quit.c  mlx_shader.c  mlx_terminate.c  mlx_window.c  mlx_xpm_converter.c
src/font/: font.h  mlx_font.c
src/images/: mlx_xpm42.c  mlx_xpm42_utils.c
src/textures/: mlx_png.c  mlx_texture.c  mlx_texture_utils.c  mlx_xpm42.c  mlx_xpm42_utils.c
src/utils/: mlx_array.c  mlx_compare.c  mlx_error.c  mlx_hash.c  mlx_hooks.c  mlx_image_utils.c  mlx_list.c  mlx_list_extra.c  mlx_list_utils.c  mlx_log.c  mlx_render_queue_sort.c  mlx_shader.c  mlx_utils.c  mlx_vec.c  mlx_window_utils.c
src/xpm/: mlx_xpm42.c
test/: Init.c  Makefile  Tester.h
test/src/: img_del_test.c  init_test.c  prim_str_draw.c  put_pixel_test.c
tests/: CMakeLists.txt  Makefile  WindowFixture.hpp  list_tests.c  listtest.c  test.h  tests.c  tests.cpp  unit.c
tools/: compile_shader.bat  compile_shader.py  compile_shader.sh  xpm3_conv.py
web/: .gitignore  README.md  demo.js  demo.wasm  index.html
